--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
+				<button class="btn-trier">Trier par prix croissant</button>
+				<br>
+				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>
+				<button class="btn-filtrerDesc">Filtrer les pièces par description</button>
+				<br>
+				<button class="btn-trierDescroissant">Filtrer par prix decroissant</button>
+				<br>
+				<p>Prix Maximum :</p>
+				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
 			</section>
 
 			<!-- Fiches produits -->
 			<section class="fiches">
+				<div class="abordables">Pieces Abordables :</div>
+				<div class="disponible">Pieces Disponibles :</div>
 			</section>
 		</main>
 	</body>
