--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 				<button class="btn-maj">Mettre à jour les pièces</button>
 				<h3>Aperçu des avis</h3>
 				<canvas id="graphique-avis" width="300" height="300"></canvas>
+				<h3>Statistique commentaires</h3>
+				<canvas id="graphique-dispo" width="300" height="300"></canvas>
 			</section>
 
 			<!-- Fiches produits -->
